--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-player": "^2.9.0",
     "react-scripts": "4.0.2",
     "react-vertical-timeline-component": "^3.3.3",
+    "react-youtube": "^7.13.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
